Enable backward compatibility with java 1.8
Enable backward compatibility with java 1.8. The purpose of this change,
is to  support Android 7 devices.