@@ -1,12 +1,17 @@
 package org.obd.metrics;
 
+import java.util.Arrays;
+import java.util.Collection;
 import java.util.List;
+import java.util.Optional;
 
+import org.obd.metrics.codec.Codec;
 import org.obd.metrics.codec.CodecRegistry;
 import org.obd.metrics.codec.batch.Batchable;
 import org.obd.metrics.command.Command;
 import org.obd.metrics.command.obd.ObdCommand;
 import org.obd.metrics.connection.Connector;
+import org.obd.metrics.pid.PidDefinition;
 import org.obd.metrics.pid.PidRegistry;
 
 import lombok.Builder;
@@ -18,7 +23,7 @@ import lombok.extern.slf4j.Slf4j;
 final class CommandExecutor {
 
 	@Default
-	private static final List<String> ERRORS = List.of("unabletoconnect", "stopped", "error", "canerror", "businit");
+	private static final List<String> ERRORS = Arrays.asList("unabletoconnect", "stopped", "error", "canerror", "businit");
 
 	private final CodecRegistry codecRegistry;
 	private final Connector connector;
@@ -29,7 +34,7 @@ final class CommandExecutor {
 	void execute(Command command) {
 
 		connector.transmit(command);
-		var data = connector.receive();
+		final String data = connector.receive();
 		if (null == data || data.contains("nodata")) {
 			log.debug("Recieved no data.");
 		} else if (ERRORS.contains(data)) {
@@ -45,11 +50,11 @@ final class CommandExecutor {
 	}
 
 	private void decodeAndPublishObdMetric(final ObdCommand command, final String data) {
-		var codec = codecRegistry.findCodec(command);
-		var allVariants = pids.findAllBy(command.getPid().getPid());
+		final Optional<Codec<?>> codec = codecRegistry.findCodec(command);
+		final Collection<PidDefinition> allVariants = pids.findAllBy(command.getPid().getPid());
 		allVariants.forEach(pDef -> {
-			var value = codec.map(p -> p.decode(pDef, data)).orElse(null);
-			var metric = ObdMetric.builder().command(allVariants.size() == 1 ? command : new ObdCommand(pDef)).raw(data)
+			final Object value = codec.map(p -> p.decode(pDef, data)).orElse(null);
+			final ObdMetric metric = ObdMetric.builder().command(allVariants.size() == 1 ? command : new ObdCommand(pDef)).raw(data)
 			        .value(value).build();
 
 			publisher.onNext(metric);
