@@ -1,5 +1,6 @@
 package org.obd.metrics.command.obd;
 
+import java.util.Arrays;
 import java.util.List;
 import java.util.stream.Collectors;
 import java.util.stream.IntStream;
@@ -19,12 +20,12 @@ public final class SupportedPidsCommand extends ObdCommand implements Codec<List
 
 	@Override
 	public List<String> decode(final PidDefinition pid, final String data) {
-		var decoder = new MetricsDecoder();
+		final MetricsDecoder decoder = new MetricsDecoder();
 
 		if (decoder.isSuccessAnswerCode(pid, data)) {
-			var decimalAnswerData = decoder.getDecimalAnswerData(pid, data);
-			var binStr = Long.toBinaryString(decimalAnswerData);
-			var decode = IntStream.range(1, binStr.length())
+			final long decimalAnswerData = decoder.getDecimalAnswerData(pid, data);
+			final String binStr = Long.toBinaryString(decimalAnswerData);
+			final List<String> decode = IntStream.range(1, binStr.length())
 			        .filter(i -> binStr.charAt(i - 1) == '1')
 			        .mapToObj(i -> String.format("%02x", i))
 			        .collect(Collectors.toList());
@@ -33,7 +34,7 @@ public final class SupportedPidsCommand extends ObdCommand implements Codec<List
 			return decode;
 		} else {
 			log.debug("Failed to transform data: {}", data);
-			return List.of();
+			return Arrays.asList();
 		}
 	}
 }
